# fastapi-demo

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy_to_ecs.yml
api/: README.md  pyproject.toml
api-package/: pyproject.toml
api-package/api_utils/: api_v1.py  api_v2.py
api/api_utils/: api_v1.py  api_v2.py  schemas.py
app/: main.py
infrastructure/: arguments.tfvars  backend.tf  main.tf  variables.tf
model/: README.md  v2.py
model-package/: pyproject.toml  train_v1.py
model-package/titanic_model/: load.py
model-package/titanic_model/assets/: model_v1.pkl
model/titanic_model/: preprocessing.py
