[tool.poetry]
name = "fastapi-demo"
version = "1.0.0"
description = "App to interact with machine learning models trained on the Titanic dataset"
authors = ["Federico Trifoglio <federico.trifoglio@assemblyglobal.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
loguru = "^0.7.0"
api-utils = { path = "api-package/", develop = false }

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"
black = "^22.8.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 88
