[tool.poetry]
name = "titanic-model"
version = "2.0.0"
description = ""
authors = ["Federico Trifoglio <federico.trifoglio@assemblyglobal.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.24.3"
pandas = "2.0.1"
scikit-learn = "1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
